--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,19 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+
+.idea/.name
+
+.idea/encodings.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/scopes/scope_settings.xml
+
+.idea/sds.Leaflet.draw.iml
+
+.idea/vcs.xml
+
+.idea/workspace.xml
